--- a/src/auth/login.html
+++ b/src/auth/login.html
@@ -23,8 +23,8 @@
                 <div class="formContent">
                     <img src="../../assets/img/logo.png" alt="" class="img-fluid">
                     <h3>Sign In</h3>
-                    <p>Enter your email and password for signing in. Thanks</p>
-                    <p>Don’t have an account? <a href="#">Signup</a></p>
+                    <p>Enter your email and password for signing in</p>
+                    <!-- <p>Don’t have an account? <a href="#">Signup</a></p> -->
                     <form action="">
                         <div class="labelInput">
                             <label for="">Email Address</label>
