--- a/src/dashboard/contact.html
+++ b/src/dashboard/contact.html
@@ -13,14 +13,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <main class="mainContent">
         <div class="dashboardLayout">
-            <div class="sideBar mobileHide">
+            <div class="sideBar">
                 <div class="logo">
                     <img src="../../assets/img/logo.png" alt="">
+                    <span class="closeMenu">
+                        <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                    </span>
                 </div>
                 <div class="menuDiv">
                     <ul>
@@ -51,7 +55,7 @@
                     <a href=""><img src="../../assets/img/logout.png" alt="" class="img-fluid"> Log Out</a>
                 </p>
             </div>
-            <div class="sideBar desktopHide">
+            <!-- <div class="sideBar desktopHide">
                 <div class="logo">
                     <img src="../../assets/img/mobileLogo.png" alt="" class="img-fluid">
                 </div>
@@ -91,10 +95,13 @@
                     <a href=""><img src="../../assets/img/logout.png" alt="" class="img-fluid"></a>
                     <span class="tooltip">logout</span>
                 </p>
-            </div>
+            </div> -->
             <div class="contentDiv">
                 <header>
                     <h3>Contacts</h3>
+                    <span class="menuBtn">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </span>
                     <div class="userOptions">
                         <ul>
                             <li>
@@ -118,8 +125,12 @@
                 </header>
                 <div class="tableDiv">
                     <div class="datePicker">
+                        <!-- <div id="datepicker" class="input-group date" data-date-format="mm-dd-yyyy">
+                            <input class="form-control" type="text" readonly />
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div> -->
                         <span class="arrowLeft"><i class="fa fa-chevron-left"></i></span>
-                        <span><p class="textSpan"><span>April 2022</span> <img src="../../assets/img/datePicker.png" alt="" class="img-fluid"><input type="date" name="" id="datePicker"></p></span>
+                        <span><p class="textSpan"><span>April 2022</span> <img src="../../assets/img/datePicker.png" alt="" class="img-fluid"><input name="" id="datepicker"></p></span>
                         <span class="arrowRight"><i class="fa fa-chevron-right"></i></span>
                     </div>
                     <table id="table_id" class="display table-responsive">
@@ -276,6 +287,7 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
 </script>
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
 <script>
     var  months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
     var currentMonth, currentYear, currentDate, month;
@@ -330,6 +342,17 @@
         $(".textSpan span").html(months[currentMonth] + " "+currentYear )
         $("#datePicker").val(currentYear + "-" +"0"+currentMonth + "-"+ currentDate)
     })
+    $(".menuBtn").click(function(){
+        $(".sideBar").css("left", "0px");
+        $(".contentDiv").css("filter", "blur(4px)")
+    })
+    $(".closeMenu").click(function(){
+        $(".sideBar").css("left", "-350px");
+        $(".contentDiv").css("filter", "blur(0px)")
+    })
+    $('#datepicker').datepicker({
+        todayHighlight: true
+});
 </script>
 
 </html>
