--- a/src/dashboard/contact.html
+++ b/src/dashboard/contact.html
@@ -115,10 +115,26 @@
                                     <span class="count"></span>
                                 </a>
                             </li>
-                            <li>
-                                <a href="">
+                            <li class="openDropDownMenu">
+                                <a>
                                     John Doe <i class="fa fa-angle-down"></i>
                                 </a>
+                                <div class="dropDownMenu">
+                                    <ul>
+                                        <li>
+                                            <a href=""><i class="fa fa-user-circle-o" aria-hidden="true"></i> Profile</a>
+                                        </li>
+                                        <li>
+                                            <a href=""><i class="fa fa-cog" aria-hidden="true"></i> Setting</a>
+                                        </li>
+                                        <li>
+                                            <a href=""><i class="fa fa-circle" aria-hidden="true"></i> Status</a>
+                                        </li>
+                                        <li>
+                                            <a href=""><i class="fa fa-sign-out" aria-hidden="true"></i> Sign Out</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </li>
                         </ul>
                     </div>
@@ -270,6 +286,183 @@
                                     <p class="commonBadge failed">Failed</p>
                                 </td>
                             </tr>
+                            <tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr><tr>
+                                <td>John Doe</td>
+                                <td>123456789</td>
+                                <td>johndoe@gmail.com</td>
+                                <td>00.0</td>
+                                <td>
+                                    <p class="commonBadge failed">Failed</p>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -352,7 +545,16 @@
     })
     $('#datepicker').datepicker({
         todayHighlight: true
-});
+    });
+    $(".openDropDownMenu a").click(function(){
+        if($(".dropDownMenu").css("opacity")==0){
+            $(".dropDownMenu").css("opacity","1")
+            $(".datePicker").css("z-index", "0")
+        } else{
+            $(".dropDownMenu").css("opacity","0")
+            $(".datePicker").css("z-index", "999999999")
+        }
+    })
 </script>
 
 </html>
