--- a/src/dashboard/contact.html
+++ b/src/dashboard/contact.html
@@ -12,9 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+   <link rel="stylesheet" href="../../assets/css/datatable.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.css" rel="stylesheet" type="text/css" />
 </head>
+</style>
 
 <body>
     <main class="mainContent">
@@ -128,10 +129,11 @@
                                             <a href=""><i class="fa fa-cog" aria-hidden="true"></i> Setting</a>
                                         </li>
                                         <li>
-                                            <a href=""><i class="fa fa-circle" aria-hidden="true"></i> Status</a>
+                                            <a href=""><i class="fa fa-circle" aria-hidden="true"></i> Status </a>
+                                            <span><i class="fa fa-caret-right" aria-hidden="true"></i></span>
                                         </li>
                                         <li>
-                                            <a href=""><i class="fa fa-sign-out" aria-hidden="true"></i> Sign Out</a>
+                                            <a href=""><img src="../../assets/img/signOut.png" alt=""> Sign Out</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -555,6 +557,10 @@
             $(".datePicker").css("z-index", "999999999")
         }
     })
+    $(document).one('ready', function(){
+        $(".dataTables_wrapper .dataTables_paginate .paginate_button.current").removeAttr( 'style' );;
+    });
+   
 </script>
 
 </html>
