Side Bar Icons Chnage

--- a/src/dashboard/contact.html
+++ b/src/dashboard/contact.html
@@ -14,6 +14,7 @@
         rel="stylesheet">
    <link rel="stylesheet" href="../../assets/css/datatable.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
 </style>
 
@@ -30,25 +31,25 @@
                 <div class="menuDiv">
                     <ul>
                         <li>
-                            <a href=""><img src="../../assets/img/dashboard.png" alt="" class="img-fluid"> Dashboard</a>
+                            <a href=""><i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a href=""><img src="../../assets/img/activity.png" alt="" class="img-fluid"> Activity</a>
+                            <a href=""><i class="fa-solid fa-chart-line"></i> Activity</a>
                         </li>
                         <li>
-                            <a href=""><img src="../../assets/img/library.png" alt="" class="img-fluid"> Library</a>
+                            <a href=""><i class="fa fa-calendar" aria-hidden="true"></i> Calender</a>
                         </li>
                         <li>
-                            <a href=""><img src="../../assets/img/security.png" alt="" class="img-fluid"> Security</a>
+                            <a href=""><i class="fa-solid fa-chart-column"></i> Sales Tracking</a>
                         </li>
                         <li>
-                            <a href=""><img src="../../assets/img/schedules.png" alt="" class="img-fluid"> Schedules</a>
+                            <a href=""><i class="fa fa-comments-o" aria-hidden="true"></i> Chat</a>
                         </li>
                         <li class="active">
-                            <a href=""><img src="../../assets/img/contact.png" alt="" class="img-fluid"> Contacts</a>
+                            <a href=""><i class="fa fa-files-o" aria-hidden="true"></i> File Manager</a>
                         </li>
                         <li>
-                            <a href=""><img src="../../assets/img/setting.png" alt="" class="img-fluid"> Settings</a>
+                            <a href=""><i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
                         </li>
                     </ul>
                 </div>
