--- a/src/dashboard/sales_tracking.html
+++ b/src/dashboard/sales_tracking.html
@@ -31,7 +31,9 @@
                 <div class="menuDiv">
                     <ul>
                         <li>
-                            <a href=""><i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard</a>
+                            <a href=""><img src="../../assets/img/dashboard.png" alt="" class="img-fluid"> 
+                                <!-- <i class="fa fa-tachometer" aria-hidden="true"></i> -->
+                                 Dashboard</a>
                         </li>
                         <li>
                             <a href=""><i class="fa-solid fa-chart-line"></i> Activity</a>
@@ -39,13 +41,13 @@
                         <li>
                             <a href=""><i class="fa fa-calendar" aria-hidden="true"></i> Calender</a>
                         </li>
-                        <li>
+                        <li  class="active">
                             <a href=""><i class="fa-solid fa-chart-column"></i> Sales Tracking</a>
                         </li>
                         <li>
                             <a href=""><i class="fa fa-comments-o" aria-hidden="true"></i> Chat</a>
                         </li>
-                        <li class="active">
+                        <li>
                             <a href=""><i class="fa fa-files-o" aria-hidden="true"></i> File Manager</a>
                         </li>
                         <li>
@@ -100,7 +102,7 @@
             </div> -->
             <div class="contentDiv">
                 <header>
-                    <h3>Contacts</h3>
+                    <h3>Sales Tracking</h3>
                     <span class="menuBtn">
                         <i class="fa fa-bars" aria-hidden="true"></i>
                     </span>
@@ -124,7 +126,7 @@
                                 <div class="dropDownMenu">
                                     <ul>
                                         <li>
-                                            <a href=""><i class="fa fa-user-circle-o" aria-hidden="true"></i> Profile</a>
+                                            <a href=""><i class="fa-solid fa-chart-line"></i> Profile</a>
                                         </li>
                                         <li>
                                             <a href=""><i class="fa fa-cog" aria-hidden="true"></i> Setting</a>
@@ -134,7 +136,7 @@
                                             <span><i class="fa fa-caret-right" aria-hidden="true"></i></span>
                                         </li>
                                         <li>
-                                            <a href=""><img src="../../assets/img/signOut.png" alt=""> Sign Out</a>
+                                            <a href=""><img src="../../assets/img/logout.png" alt=""> Sign Out</a>
                                         </li>
                                     </ul>
                                 </div>
