Side Menu Changes

--- a/src/dashboard/sales_tracking.html
+++ b/src/dashboard/sales_tracking.html
@@ -47,13 +47,18 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
                         <li  class="nav-item has-submenu active">
                             <a class="submenu" href="#">
                                 <i  class="fa-solid fa-chart-column"></i> Sales Tracking
-                                <i style="float:right" class="fa-solid fa-caret-down"></i>
+                                <span class="arrowRightMenu">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                </span>
+                                <span class="arrowDown">
+                                    <i class="fa-solid fa-angle-down"></i>
+                                </span>
                             </a>
                             <ul class="submenu collapse">
-                                <li><a class="nav-link" href="#"><i class="fa-solid fa-book"></i> Mickey Kass </a></li>
-                                <li><a class="nav-link" href="#"><i class="fa-solid fa-book"></i> Clinton Sparks </a></li>
-                                <li><a class="nav-link" href="#"><i class="fa-solid fa-book"></i> Justin Woll </a> </li>
-                                <li><a class="nav-link" href="#"><i class="fa-solid fa-book"></i> Mentorships.com </a> </li>
+                                <li><a class="nav-link" href="#"><i class="fa fa-book" aria-hidden="true"></i> Mickey Kass </a></li>
+                                <li><a class="nav-link" href="#"><i class="fa fa-book" aria-hidden="true"></i> Clinton Sparks </a></li>
+                                <li><a class="nav-link" href="#"><i class="fa fa-book" aria-hidden="true"></i> Justin Woll </a> </li>
+                                <li><a class="nav-link" href="#"><i class="fa fa-book" aria-hidden="true"></i> Mentorships.com </a> </li>
                             </ul>
                         </li>
 
