--- a/src/dashboard/sales_tracking.html
+++ b/src/dashboard/sales_tracking.html
@@ -55,10 +55,18 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
                                 </span>
                             </a>
                             <ul class="submenu collapse">
-                                <li><a class="nav-link" href="#"><i class="fa fa-book" aria-hidden="true"></i> Mickey Kass </a></li>
-                                <li><a class="nav-link" href="#"><i class="fa fa-book" aria-hidden="true"></i> Clinton Sparks </a></li>
-                                <li><a class="nav-link" href="#"><i class="fa fa-book" aria-hidden="true"></i> Justin Woll </a> </li>
-                                <li><a class="nav-link" href="#"><i class="fa fa-book" aria-hidden="true"></i> Mentorships.com </a> </li>
+                                <li><a class="nav-link" href="#">
+                                    <!-- <i class="fa fa-book" aria-hidden="true"></i>  -->
+                                    Mickey Kass </a></li>
+                                <li><a class="nav-link" href="#">
+                                    <!-- <i class="fa fa-book" aria-hidden="true"></i>  -->
+                                    Clinton Sparks </a></li>
+                                <li><a class="nav-link" href="#">
+                                    <!-- <i class="fa fa-book" aria-hidden="true"></i>  -->
+                                    Justin Woll </a> </li>
+                                <li><a class="nav-link" href="#">
+                                    <!-- <i class="fa fa-book" aria-hidden="true"></i>  -->
+                                    Mentorships.com </a> </li>
                             </ul>
                         </li>
 
