--- a/src/dashboard/sales_tracking.html
+++ b/src/dashboard/sales_tracking.html
@@ -154,15 +154,15 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
                                 <div class="dropDownMenu">
                                     <ul>
                                         <li>
-                                            <a href=""><i class="fa-solid fa-chart-line"></i> Profile</a>
+                                            <a href=""><i class="fa-solid fa-user"></i> Profile</a>
                                         </li>
                                         <li>
                                             <a href=""><i class="fa fa-cog" aria-hidden="true"></i> Setting</a>
                                         </li>
                                         <li>
-                                            <a href=""><i class="fa fa-circle" aria-hidden="true"></i> Status </a>
+                                            <a href=""><i class="fa-regular fa-circle"></i> Status </a>
                                             <span>
-                                                <i  class="fa-solid fa-caret-down" style="color:#A3AED0;" aria-hidden="true"></i>
+                                                <i  class="fa-solid fa-angle-right" style="color:#A3AED0;" aria-hidden="true"></i>
                                             </span>
                                         </li>
                                         <li>
