--- a/src/dashboard/sales_tracking.html
+++ b/src/dashboard/sales_tracking.html
@@ -165,6 +165,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
                                                 <i  class="fa-solid fa-angle-right" style="color:#A3AED0;" aria-hidden="true"></i>
                                             </span>
                                         </li>
+                                        <hr sstyle="margin:0px;" />
                                         <li>
                                             <a href=""><img src="../../assets/img/logout.png" alt=""> Sign Out</a>
                                         </li>
