--- a/src/dashboard/sales_tracking.html
+++ b/src/dashboard/sales_tracking.html
@@ -15,8 +15,7 @@
    <link rel="stylesheet" href="../../assets/css/datatable.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.css" rel="stylesheet" type="text/css" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" /> -->
-    <link rel="stylesheet" 
-href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 </style>
@@ -160,7 +159,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
                                             <a href=""><i class="fa fa-cog" aria-hidden="true"></i> Setting</a>
                                         </li>
                                         <li>
-                                            <a href=""><i class="fa-regular fa-circle"></i> Status </a>
+                                            <a href=""><i class="fa fa-ellipsis-h" aria-hidden="true"></i> Status </a>
                                             <span>
                                                 <i  class="fa-solid fa-angle-right" style="color:#A3AED0;" aria-hidden="true"></i>
                                             </span>
