--- a/src/dashboard/sales_tracking.html
+++ b/src/dashboard/sales_tracking.html
@@ -158,8 +158,8 @@
                                         <li>
                                             <a href=""><i class="fa fa-cog" aria-hidden="true"></i> Setting</a>
                                         </li>
-                                        <li>
-                                            <a href=""><i class="fa fa-ellipsis-h" aria-hidden="true"></i> Status </a>
+                                        <li class="statusLink">
+                                            <a href=""><a class="icon"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a> Status </a>
                                             <span>
                                                 <i  class="fa-solid fa-angle-right" style="color:#A3AED0;" aria-hidden="true"></i>
                                             </span>
